Fix legibility of errors in fields. #TG-2262 #STATUS-ready-for-test

--- a/app/styles/layout/forms.scss
+++ b/app/styles/layout/forms.scss
@@ -28,6 +28,10 @@ textarea {
     @include placeholder {
         color: darken($gray-light, 10%);
     }
+    &.checksley-error {
+        border: 1px solid $red;
+        transition: border .3s linear;
+    }
 }
 
 textarea {
@@ -35,9 +39,12 @@ textarea {
     resize: vertical;
 }
 
+
 .checksley-error-list {
     @extend %small;
+    background: rgba($whitish, .8);
     margin-bottom: 0;
+    padding: 0 .5rem;
     position: absolute;
     right: 2rem;
     top: 10px;
